--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section class="feature-category-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Các Tính Năng Chính</span>
+                    <span class="section-tagline">CÁC TÍNH NĂNG CHÍNH</span>
                     <h2 class="section-title">Những Gì Chúng Tôi Cung Cấp</h2>
                     <p class="section-description">
                         Khám phá các lợi ích và điểm nổi bật khi bạn tham gia học tập cùng PLT Solutions,
@@ -252,7 +252,7 @@
         <section class="popular-courses-section section-padding bg-light">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Khóa Học Phổ Biến</span>
+                    <span class="section-tagline">KHÓA HỌC PHỔ BIẾN</span>
                     <h2 class="section-title">Khám Phá Các Khóa Học Hàng Đầu</h2>
                     <p class="section-description">
                         Chúng tôi cung cấp những khóa học được yêu thích nhất, giúp bạn trang bị
@@ -286,7 +286,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                     <span class="course-price">4.500.000VNĐ</span>
                                 </div>
-                                <a href="courses-detail/automated-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="courses-detail/automated-testing.html" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -317,7 +321,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                     <span class="course-price">4.500.000VNĐ</span>
                                 </div>
-                                <a href="courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -348,7 +356,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                     <span class="course-price">4.500.000VNĐ</span>
                                 </div>
-                                <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -379,7 +391,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Yen</span>
                                     <span class="course-price">2.000.000VNĐ</span>
                                 </div>
-                                <a href="courses-detail/basic-software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="courses-detail/basic-software-testing.html" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -410,7 +426,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr. Khanh</span>
                                     <span class="course-price">5.000.000VNĐ</span>
                                 </div>
-                                <a href="#" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="#" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -441,7 +461,11 @@
                                     <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Vy</span>
                                     <span class="course-price">3.000.000VNĐ</span>
                                 </div>
-                                <a href="./courses-detail/photography-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <a href="#" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Xem chi tiết</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -454,7 +478,7 @@
         <section class="why-choose-us-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
-                    <span class="section-tagline">Tại Sao Chọn Chúng Tôi</span>
+                    <span class="section-tagline">TẠI SAO CHỌN CHÚNG TÔI</span>
                     <h2 class="section-title">Lý Do Bạn Nên Học Cùng PLT Solutions</h2>
                     <p class="section-description">
                         Chúng tôi cam kết mang đến trải nghiệm học tập vượt trội với những ưu điểm độc đáo,
@@ -496,7 +520,7 @@
         <section class="instructors-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Đội Ngũ Giảng Viên</span>
+                    <span class="section-tagline">ĐỘI NGŨ GIẢNG VIÊN</span>
                     <h2 class="section-title">Gặp Gỡ Các Giảng Viên Của Chúng Tôi</h2>
                     <p class="section-description">
                         Đội ngũ giảng viên tại PLT Solutions đều là những chuyên gia có kinh nghiệm,
@@ -558,7 +582,7 @@
         <section class="testimonials-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
-                    <span class="section-tagline">Phản Hồi Từ Học Viên</span>
+                    <span class="section-tagline">PHẢN HỒI TỪ HỌC VIÊN</span>
                     <h2 class="section-title">Những Gì Học Viên Của Chúng Tôi Nói</h2>
                     <p class="section-description">
                         Đọc những lời chia sẻ chân thực từ các học viên đã trải nghiệm và thành công cùng PLT Solutions.
@@ -633,7 +657,7 @@
         <section class="blog-posts-section-home section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Bài Viết Mới Nhất</span>
+                    <span class="section-tagline">BÀI VIẾT MỚI NHẤT</span>
                     <h2 class="section-title">Kiến Thức Và Tin Tức Từ Blog Của Chúng Tôi</h2>
                     <p class="section-description">
                         Cập nhật những bài viết mới nhất về xu hướng công nghệ, mẹo học tập,
@@ -655,7 +679,11 @@
                                 Notion là một ứng dụng quản lý công việc và ghi chú đa năng, cho phép bạn tạo ra các trang (page) linh hoạt để ghi chép, quản lý dự án, lập kế hoạch, theo dõi công việc cá nhân hoặc nhóm. Điểm mạnh của Notion là khả năng tùy biến cao và giao diện trực quan, dễ sử dụng.
                             </p>
                             <div class="blog-footer course-footer">
-                                <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
+                                <a href="#" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Đọc Thêm</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -673,7 +701,11 @@
                                 Kiểm thử thực chất là một quy trình. Quá trình này bắt đầu từ việc lập kế hoạch kiểm thử, sau đó là thiết kế các trường hợp kiểm thử, chuẩn bị cho việc thực thi và đánh giá kết quả thực thi cho đến khi kết thúc hoạt động kiểm thử.
                             </p>
                             <div class="blog-footer course-footer">
-                                <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
+                                <a href="#" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Đọc Thêm</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -691,7 +723,11 @@
                                 Bài viết quảng cáo, giới thiệu sản phẩm, dịch vụ là một trong những công cụ phục vụ đắc lực đối với mục đích kinh doanh đang được nhiều đơn vị khai thác du lịch áp dụng. Song thực tế cách viết bài chuẩn SEO lĩnh vực du lịch vẫn còn khá máy móc khi tập trung chủ yếu vào những mô típ đã quá quen thuộc không còn gây được hứng thú cho khách hàng như giới thiệu tour du lịch, địa điểm vui chơi giải trí hay giá thành, tiện ích mà không có sự mới lạ, khác biệt.
                             </p>
                             <div class="blog-footer course-footer">
-                                <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
+                                <a href="#" class="btn btn-sm btn-outline-primary custom-hover-effect">
+                                    <span class="btn-text">Đọc Thêm</span>
+                                    <span class="btn-bg-left"></span>
+                                    <span class="btn-bg-right"></span>
+                                </a>
                             </div>
                         </div>
                     </article>
@@ -704,7 +740,7 @@
         <section class="partners-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Đối Tác Của Chúng Tôi</span>
+                    <span class="section-tagline">ĐỐI TÁC CỦA CHÚNG TÔI</span>
                     <h2 class="section-title">Các Công Ty Tin Tưởng Chúng Tôi</h2>
                     <p class="section-description">
                         PLT Solutions tự hào là đối tác của nhiều doanh nghiệp hàng đầu,
