--- a/courses-detail/automated-testing.html
+++ b/courses-detail/automated-testing.html
@@ -246,7 +246,7 @@
                         <span class="discount">50% Off</span>
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
-                    <button class="btn btn-outline-primary btn-block add-to-cart-btn"
+                    <button class="btn btn-primary btn-block add-to-cart-btn"
                         data-course-id="web-dev-fullstack"
                         data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
                         data-course-price="49.99">Thêm vào giỏ hàng</button>
