--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="container">
                             <div class="hero-content" data-aos="fade-right" data-aos-duration="1000">
                                 <span class="hero-tagline" data-aos="fade-up" data-aos-delay="100">Nâng cao kỹ năng với PLT Solutions</span>
-                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Tìm kiếm các khóa học trực tuyến tốt nhất</h1>
+                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Tìm Kiếm Các Khóa Học Trực Tuyến Tốt Nhất</h1>
                                 <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
                                     Khám phá hàng ngàn khóa học chất lượng cao từ các chuyên gia hàng đầu.
                                     Học hỏi những kiến thức mới và cơ hội nghề nghiệp của bạn ngay hôm nay.
@@ -100,7 +100,7 @@
                         <div class="container">
                             <div class="hero-content" data-aos="fade-left" data-aos-duration="1000">
                                 <span class="hero-tagline" data-aos="fade-up" data-aos-delay="100">Cơ hội việc làm rộng mở</span>
-                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Phát triển sự nghiệp với kiến thức thực tế</h1>
+                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Phát Triển Sự Nghiệp Với Kiến Thức Thực Tế</h1>
                                 <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
                                     Các khóa học của chúng tôi được thiết kế để trang bị cho bạn những kỹ năng
                                     cần thiết, đáp ứng yêu cầu của thị trường lao động hiện đại.
@@ -134,7 +134,7 @@
                         <div class="container">
                             <div class="hero-content" data-aos="zoom-in" data-aos-duration="1000">
                                 <span class="hero-tagline" data-aos="fade-up" data-aos-delay="100">Học hỏi từ những chuyên gia</span>
-                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Đội Ngũ Giảng Viên Tận Tâm, Giàu Kinh Nghiệm</h1>
+                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Giảng Viên Tận Tâm, Giàu Kinh Nghiệm</h1>
                                 <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
                                     Chúng tôi tự hào với đội ngũ giảng viên hàng đầu, luôn sẵn sàng truyền đạt
                                     kiến thức và kinh nghiệm thực chiến cho từng học viên.
@@ -222,13 +222,22 @@
         </section>
         <section class="about-section-home section-padding">
             <div class="container">
-                <div class="about-content-grid-home">
-                    <div class="about-image-home" data-aos="fade-right" data-aos-duration="1000">
-                        <img src="image/about1.png" alt="Về chúng tôi - PLT Solutions">
+                <div class="about-content-grid-home custom-wrap"> 
+                    <div class="about-overlay-effect custom-overlay">
+                        <div class="about-overlay-content custom-overlay-content animate slide-left delay-2">
+                            <span class="section-tagline animate slide-left pop delay-4">Về Chúng Tôi</span>
+                            <h2 class="section-title animate slide-left pop delay-5" style="margin-bottom: 2.5rem;">Nền tảng giáo dục trực tuyến tốt nhất</h2>
+                        </div>
+                        <div class="about-image-home custom-image-content animate slide delay-5">
+                            <img src="image/about1.png" alt="Về chúng tôi - PLT Solutions" style="display: none;"> </div>
+                        <div class="about-dots custom-dots animate">
+                            <div class="dot animate slide-up delay-6"></div>
+                            <div class="dot animate slide-up delay-7"></div>
+                            <div class="dot animate slide-up delay-8"></div>
+                        </div>
                     </div>
-                    <div class="about-text-home" data-aos="fade-left" data-aos-duration="1000">
-                        <span class="section-tagline">Về Chúng Tôi</span>
-                        <h2 class="section-title">Nền tảng giáo dục trực tuyến tốt nhất</h2>
+
+                    <div class="about-text-home custom-text">
                         <p>
                             PLT Solutions là một nền tảng học tập trực tuyến tiên phong, mang sứ mệnh
                             cung cấp kiến thức và kỹ năng thực tế cho mọi người. Chúng tôi tin rằng
@@ -244,7 +253,7 @@
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Cộng đồng học tập năng động</li>
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Hỗ trợ học viên tận tình</li>
                         </ul>
-                        <a href="about.html" class="btn btn-primary " data-aos="fade-up" data-aos-delay="100">Tìm hiểu thêm</a>
+                        <a href="about.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
@@ -815,6 +824,7 @@
             once: true,
         });
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/cart.js"></script>
     <script>
