--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
                                     Học hỏi những kiến thức mới và cơ hội nghề nghiệp của bạn ngay hôm nay.
                                 </p>
                                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
-                                    <a href="courses.html" class="btn btn-primary">Khám phá khóa học</a>
+                                    <a href="courses.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                                        <span>Khám Phá Khóa Học</span>
+                                        <span>Khám Phá Khóa Học</span>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                    </a>
                                     <a href="#" class="btn btn-secondary">Xem video giới thiệu <i class="fas fa-play-circle" aria-hidden="true"></i></a>
                                 </div>
                                 <div class="hero-search-bar" data-aos="fade-up" data-aos-delay="450">
@@ -106,7 +114,15 @@
                                     cần thiết, đáp ứng yêu cầu của thị trường lao động hiện đại.
                                 </p>
                                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
-                                    <a href="about.html" class="btn btn-primary">Về chúng tôi</a>
+                                    <a href="about.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                                        <span>Về Chúng Tôi</span>
+                                        <span>Về Chúng Tôi</span>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                    </a>
                                     <a href="contact.html" class="btn btn-secondary">Liên hệ ngay <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
                                 </div>
                                 <div class="hero-search-bar" data-aos="fade-up" data-aos-delay="450">
@@ -140,7 +156,15 @@
                                     kiến thức và kinh nghiệm thực chiến cho từng học viên.
                                 </p>
                                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
-                                    <a href="blog.html" class="btn btn-primary">Đọc Blog</a>
+                                    <a href="blog.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                                        <span>Đọc Blog</span>
+                                        <span>Đọc Blog</span>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                                    </a>
                                     <a href="courses.html" class="btn btn-secondary">Tất cả khóa học</a>
                                 </div>
                                 <div class="hero-search-bar" data-aos="fade-up" data-aos-delay="450">
@@ -253,7 +277,15 @@
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Cộng đồng học tập năng động</li>
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Hỗ trợ học viên tận tình</li>
                         </ul>
-                        <a href="about.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">Tìm hiểu thêm</a>
+                        <a href="about.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                            <span>Tìm hiểu thêm</span>
+                            <span>Tìm hiểu thêm</span>
+                            <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                            <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                            <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                            <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                            <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -480,7 +512,15 @@
                     </article>
                 </div>
                 <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
-                    <a href="courses.html" class="btn btn-primary btn-lg">Xem tất cả khóa học</a>
+                    <a href="courses.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                        <span>Xem Tất Cả Các Khóa Học</span>
+                        <span>Xem Tất Cả Các Khóa Học</span>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    </a>
                 </div>
             </div>
         </section>
@@ -584,7 +624,15 @@
                     </div>
                 </div>
                 <div class="text-center view-all-instructors-btn" data-aos="fade-up" data-aos-delay="500">
-                    <a href="#" class="btn btn-primary btn-lg">Xem tất cả giảng viên</a>
+                    <a href="#" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                    <span>Xem Tất Cả Các Giảng Viên</span>
+                    <span>Xem Tất Cả Các Giảng Viên</span>
+                    <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                </a>
                 </div>
             </div>
         </section>
@@ -659,7 +707,15 @@
                     <p class="section-description">
                         Tham gia cùng hàng ngàn học viên khác và mở khóa tiềm năng của bạn với các khóa học chất lượng cao tại PLT Solutions.
                     </p>
-                    <a href="courses.html" class="btn btn-primary btn-lg" data-aos="fade-up" data-aos-delay="200">Bắt đầu học ngay</a>
+                    <a href="courses.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                        <span>Bắt Đầu Học Ngay</span>
+                        <span>Bắt Đầu Học Ngay</span>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    </a>
                 </div>
             </div>
         </section>
@@ -742,7 +798,15 @@
                     </article>
                 </div>
                 <div class="text-center view-all-blog-btn" data-aos="fade-up" data-aos-delay="400">
-                    <a href="blog.html" class="btn btn-primary btn-lg">Xem tất cả bài viết</a>
+                    <a href="blog.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">
+                        <span>Xem Tất Cả Các Bài Viết</span>
+                        <span>Xem Tất Cả Các Bài Viết</span>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                        <svg viewBox="0 0 100 100"><path d="M50 0 L61.8 38.2 L100 50 L61.8 61.8 L50 100 L38.2 61.8 L0 50 L38.2 38.2 Z"/></svg>
+                    </a>
                 </div>
             </div>
         </section>
