--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Xưởng Thực Tập PLT Solutions - Nâng tầm kỹ năng với các khóa học chất lượng</title>
     <meta name="description" content="Khám phá hàng ngàn khóa học chất lượng cao từ các chuyên gia hàng đầu tại PLT Solutions. Nâng cao kỹ năng, mở rộng cơ hội nghề nghiệp với Kiểm thử phần mềm, Kiểm thử tự động, Tin học văn phòng và nhiều hơn nữa.">
     <meta name="keywords" content="khóa học trực tuyến, PLT Solutions, kiểm thử phần mềm, kiểm thử tự động, tin học văn phòng, học lập trình, kỹ năng mềm, chứng chỉ trực tuyến">
-    <link rel="icon" href="image/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="image/anh1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -733,10 +733,10 @@
                             </p>
                             <div class="testimonial-author-info">
                                 <div class="testimonial-avatar">
-                                    <img src="image/avatar-1.jpg" alt="Ảnh đại diện học viên Nguyễn Văn A">
+                                    <img src="image/chandung1.jpg" alt="Ảnh đại diện học viên Nguyễn Văn A">
                                 </div>
                                 <div class="author-details">
-                                    <h4 class="author-name">Nguyễn Văn A</h4>
+                                    <h4 class="author-name">Nguyễn Văn Tèo</h4>
                                     <p class="author-designation">Kỹ sư QA</p>
                                 </div>
                             </div>
@@ -749,10 +749,10 @@
                             </p>
                             <div class="testimonial-author-info">
                                 <div class="testimonial-avatar">
-                                    <img src="image/avatar-2.jpg" alt="Ảnh đại diện học viên Trần Thị B">
+                                    <img src="image/chandung2.jpg" alt="Ảnh đại diện học viên Trần Thị B">
                                 </div>
                                 <div class="author-details">
-                                    <h4 class="author-name">Trần Thị B</h4>
+                                    <h4 class="author-name">Trần Thị Thắm</h4>
                                     <p class="author-designation">Tester</p>
                                 </div>
                             </div>
@@ -765,10 +765,10 @@
                             </p>
                             <div class="testimonial-author-info">
                                 <div class="testimonial-avatar">
-                                    <img src="image/avatar-3.jpg" alt="Ảnh đại diện học viên Lê Văn C">
+                                    <img src="image/chandung3.jpg" alt="Ảnh đại diện học viên Lê Văn C">
                                 </div>
                                 <div class="author-details">
-                                    <h4 class="author-name">Lê Văn C</h4>
+                                    <h4 class="author-name">Lê Văn Nam</h4>
                                     <p class="author-designation">Nhân viên Văn phòng</p>
                                 </div>
                             </div>
@@ -899,11 +899,11 @@
                     </p>
                 </div>
                 <div class="partners-grid">
-                    <img src="image/partner-logo-1.png" alt="Partner Logo 1" class="partner-logo" data-aos="zoom-in" data-aos-delay="100">
-                    <img src="image/partner-logo-2.png" alt="Partner Logo 2" class="partner-logo" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="image/partner-logo-3.png" alt="Partner Logo 3" class="partner-logo" data-aos="zoom-in" data-aos-delay="300">
-                    <img src="image/partner-logo-4.png" alt="Partner Logo 4" class="partner-logo" data-aos="zoom-in" data-aos-delay="400">
-                    <img src="image/partner-logo-5.png" alt="Partner Logo 5" class="partner-logo" data-aos="zoom-in" data-aos-delay="500">
+                    <img src="image/google.png" alt="Partner Logo 1" class="partner-logo" data-aos="zoom-in" data-aos-delay="100">
+                    <img src="image/intel.png" alt="Partner Logo 2" class="partner-logo" data-aos="zoom-in" data-aos-delay="200">
+                    <img src="image/technology.png" alt="Partner Logo 3" class="partner-logo" data-aos="zoom-in" data-aos-delay="300">
+                    <img src="image/microsoft.jpg" alt="Partner Logo 4" class="partner-logo" data-aos="zoom-in" data-aos-delay="400">
+                    <img src="image/meta.png" alt="Partner Logo 5" class="partner-logo" data-aos="zoom-in" data-aos-delay="500">
                 </div>
             </div>
         </section>
