--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,7 @@
                     <span id="cart-total-price">$0.00</span>
                 </div>
                 <button id="checkout-btn" class="btn btn-primary btn-block" disabled>Tiến hành thanh toán</button>
-                <button id="clear-cart-btn" class="btn btn-secondary btn-block mt-2" disabled>Xóa giỏ hàng</button>
+                <button id="clear-cart-btn" class="btn btn-primary btn-block mt-2" disabled>Xóa giỏ hàng</button>
             </div>
         </div>
     </main>
