--- a/courses.html
+++ b/courses.html
@@ -113,7 +113,7 @@
                         <div class="course-footer">
                             <span class="course-price">3.500.000VNĐ</span>
                             <a href="courses-detail/basic-software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
-                            <button class="btn btn-sm btn-success add-to-cart-btn"
+                            <button class="btn btn-primary btn-sm btn-success add-to-cart-btn"
                                 data-course-id="data-science-intro"
                                 data-course-name="Khóa Học Kiểm Thử Phần Mềm Căn Bản"
                                 data-course-price="3.400.000VNĐ">Thêm vào giỏ hàng</button>
