--- a/courses-detail/automated-testing.html
+++ b/courses-detail/automated-testing.html
@@ -249,7 +249,7 @@
                     <button class="btn btn-primary btn-block add-to-cart-btn"
                         data-course-id="web-dev-fullstack"
                         data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
-                        data-course-price="49.99">Thêm vào giỏ hàng</button>
+                        data-course-price="4.500.000VNĐ">Thêm vào giỏ hàng</button>
 
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
